[project]
name = "python-mcp-server"
version = "0.1.0"
description = "MCP Server"
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core<0.3.51",
    "chromadb<=0.4.22",
    "nodejs>=0.1.1",
    "npm>=0.1.1",
    "pyyaml>=6.0.1",
    # "claude",
]
